# DPDTreeEstimator

./: .buildinfo  .coveragerc  .gitignore  CITATION.bib  LICENSE  README.md  api.html  dpdt_demo.ipynb  genindex.html  index.html  objects.inv  pyproject.toml  quick_start.html  search.html  searchindex.js  sg_execution_times.html  user_guide.html
.github/: dependabot.yml
.github/workflows/: deploy-gh-pages.yml  lint.yml  python-app.yml
_downloads/28ddd9c42a4ef71fa4b2b225d9202c96/: plot_pathological_tree_classif.ipynb
_downloads/3eea7adbe5c46f351f742cdc5de8a744/: plot_pathological_tree_classif.py
_downloads/5f1a8a96d8c59c621913f9e0a6708765/: plot_model_selection.py
_downloads/74ea407b3902efe66cd3d3326f6739b0/: plot_gradient_boosting_comparison.py
_downloads/792295d4fac5001991a3a5c74bf4a215/: plot_gradient_boosting_comparison.ipynb
_downloads/82de035aa6b886dab3b973e2baf7b804/: plot_classifier_comparison.ipynb
_downloads/cb85c58d76915e3ef162c0f5b3e57e33/: plot_classifier_comparison.py
_downloads/ea7f07ac79dcca2752f336c244696815/: plot_model_selection.ipynb
_downloads/fed3e85cac62fc93e088aa8cb008d467/: plot_classifier.ipynb
_sources/: quick_start.rst.txt  sg_execution_times.rst.txt
_sources/auto_examples/: index.rst.txt  plot_classifier.rst.txt  plot_classifier_comparison.rst.txt  plot_gradient_boosting_comparison.rst.txt  plot_model_selection.rst.txt  plot_pathological_tree_classif.rst.txt  sg_execution_times.rst.txt
_static/: documentation_options.js
auto_examples/: index.html  plot_classifier.html  plot_classifier_comparison.html  plot_gradient_boosting_comparison.html  plot_model_selection.html  plot_pathological_tree_classif.html  sg_execution_times.html
benchmarking/: openmlbenchmark.py
doc/: api.rst  conf.py  quick_start.rst
dpdt/: __init__.py  boosted_dpdt.py  dpdt_classifier.py  dpdt_drt_classifier.py  dpdt_estimator.py  dpdt_gb.py  dpdt_regressor.py  opt_greedy_classifier.py  quantile_classifier.py  quantile_classifier_light.py  splitters.py  topK_classifier.py  topK_classifier_light.py
dpdt/tests/: test_common.py  test_dpdt.py
examples/: plot_classifier.py  plot_classifier_comparison.py  plot_gradient_boosting_comparison.py  plot_model_selection.py  plot_pathological_tree_classif.py
examples/eye_movements_data/: eye_movements_seed_0_x_test.npy  eye_movements_seed_0_x_train.npy  eye_movements_seed_0_y_test.npy  eye_movements_seed_0_y_train.npy
